--- a/src/assets/scss/screens/ipad.scss
+++ b/src/assets/scss/screens/ipad.scss
@@ -31,7 +31,7 @@
                     }
                     .startBtn{
                         .button{
-                            img{
+                            img:nth-child(1){
                                 height: 130px;
                             }
                         }
