--- a/src/assets/scss/screens/iphone5.scss
+++ b/src/assets/scss/screens/iphone5.scss
@@ -33,7 +33,7 @@
                     }
                     .startBtn{
                         .button{
-                            img{
+                            img:nth-child(1){
                                 height: 75px;
                             }
                         }
@@ -49,7 +49,7 @@
                 }
                 .content__row{
                     margin-top: 22px;
-                    padding-top: 35px;
+                    padding-top: 40px;
                     .count{
                         top: -18px;
                         img{
@@ -58,22 +58,22 @@
                     }
                     .main{
                         .main__text{
-                            margin-bottom: 13px;
+                            margin-bottom: 20px;
                             span{
                                 font-size: 14px;
                             }
                         }
                         .main__image{
                             img{
-                                height: 140px;
+                                height: 160px;
                             }
                         }
                     }
                 }
                 .buttons{
                     .button{
-                        padding: 7px 0;
-                        font-size: 12px;
+                        padding: 8px 0;
+                        font-size: 13px;
                     }
                 }
             }
