--- a/src/assets/scss/screens/iphoneXr.scss
+++ b/src/assets/scss/screens/iphoneXr.scss
@@ -33,8 +33,8 @@
                     }
                     .startBtn{
                         .button{
-                            img{
-                                height: 110px;
+                            img:nth-child(1){
+                                height: 120px;
                             }
                         }
                     }
