--- a/src/assets/scss/screens/lgG.scss
+++ b/src/assets/scss/screens/lgG.scss
@@ -33,7 +33,7 @@
                     }
                     .startBtn{
                         .button{
-                            img{
+                            img:nth-child(1){
                                 height: 90px;
                             }
                         }
