--- a/src/assets/scss/screens/iphone7.scss
+++ b/src/assets/scss/screens/iphone7.scss
@@ -164,6 +164,11 @@
                         }
                     }
                 }
+                .saveImageInfo{
+                    span{
+                        font-size: 10px;
+                    }
+                }
                 .sharedSNS{
                     .sharedImage{
                         img{
