--- a/src/assets/scss/screens/iphone7plus.scss
+++ b/src/assets/scss/screens/iphone7plus.scss
@@ -166,6 +166,11 @@
                         }
                     }
                 }
+                .saveImageInfo{
+                    span{
+                        font-size: 11px;
+                    }
+                }
                 .sharedSNS{
                     .sharedImage{
                         img{
