--- a/src/assets/scss/screens/iphoneXr.scss
+++ b/src/assets/scss/screens/iphoneXr.scss
@@ -171,6 +171,11 @@
                         }
                     }
                 }
+                .saveImageInfo{
+                    span{
+                        font-size: 11px;
+                    }
+                }
                 .sharedSNS{
                     .sharedImage{
                         img{
