--- a/src/views/partials/type1.pug
+++ b/src/views/partials/type1.pug
@@ -1,4 +1,4 @@
-.type.type-one
+.type.type-one(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .title
         .title__type
             span 유형 1
