--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -1,4 +1,4 @@
-.slide.loading
+.slide.loading(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .content__row
             .questionTitle
