--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -1,4 +1,4 @@
-.slide.start
+.slide.start(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .content__row
             .topImage
