--- a/src/assets/scss/screens/result.scss
+++ b/src/assets/scss/screens/result.scss
@@ -6,6 +6,25 @@
     }
     .slide__content{
         width: 100%;
+        position: relative;
+        .resultImage{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            z-index: 2;
+            img{
+                width: 100%;
+                -webkit-touch-callout: initial;
+                -webkit-touch-select: initial;
+                -ms-user-select: initial;
+                -moz-user-select: initial;
+                -webkit-user-select: initial;
+                user-select: initial;
+            }
+        }
         .type{
             &.type-one{
                 background-color: $type-one;
@@ -19,7 +38,7 @@
             &.type-four{
                 background-color: $type-four;
             }
-            padding: 30px 0;
+            padding: 7% 0;
             .title{
                 display: flex;
                 flex-direction: column;
@@ -94,7 +113,21 @@
                 }
             }
         }
+        .saveImageInfo{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 2%;
+            span{
+                font-size: 13px;
+                font-family: "SCDream6";
+                color: rgb(63, 63, 63);
+                animation: $slowBlinkBlink;
+            }
+        }
         .sharedSNS{
+            margin-bottom: 14%;
             .sharedImage{
                 margin-bottom: 10px;
                 display: flex;
