--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -12,10 +12,10 @@ html(lang="en")
         link(rel="preload" href="https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff2" as="font" type="font/woff2" crossorigin)
         link(rel="preload" href="https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff2" as="font" type="font/woff2" crossorigin)
         title 관태기 테스트
-    body(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
-        .resorceLoading#jsResorceLoading
+    body
+        .resorceLoading#jsResorceLoading(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
             div 로딩중...
-        .preventHorizonMode
+        .preventHorizonMode(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
             div 세로모드로 다시 돌려주세요
         main
             #jsSlider.slider
