--- a/src/views/partials/type3.pug
+++ b/src/views/partials/type3.pug
@@ -1,4 +1,4 @@
-.type.type-three
+.type.type-three(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .title
         .title__type
             span 유형 3
