--- a/src/views/partials/type4.pug
+++ b/src/views/partials/type4.pug
@@ -1,4 +1,4 @@
-.type.type-four
+.type.type-four(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .title
         .title__type
             span 유형 4
