--- a/src/views/screens/question7.pug
+++ b/src/views/screens/question7.pug
@@ -1,4 +1,4 @@
-.slide.question
+.slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
             img(data-src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C4,7%EC%83%81%EB%8B%A8%EB%B0%B0%EA%B2%BD.png")
