--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -9,4 +9,4 @@
             .sharedImage
                 img(data-src="configs/images/types/resultBottom.png")
             .addThis
-                //- .addthis_inline_share_toolbox_eouf
+                .addthis_inline_share_toolbox_2pvo
