--- a/src/assets/scss/screens/result.scss
+++ b/src/assets/scss/screens/result.scss
@@ -75,7 +75,7 @@
                 .mainImage{
                     margin-bottom: 25px;
                     img{
-                        height: 270px;
+                        height: 260px;
                     }
                 }
                 .info{
@@ -122,7 +122,8 @@
             }
         }
         .sharedSNS{
-            margin-bottom: 14%;
+            position: relative;
+            z-index: 3;
             .sharedImage{
                 margin-bottom: 10px;
                 display: flex;
