--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -23,7 +23,8 @@
                 font-size: 21px;
                 margin-bottom: 17px;
                 span {
-                    font-family: "SCDream5";
+                    font-family: "SCDream";
+                    font-weight: 500;
                     focus{
                         color: #ed6461;
                         font-size: 22px;
@@ -35,7 +36,8 @@
                 line-height: 1.5;
                 span{
                     font-size: 22px;
-                    font-family: "SCDream6";
+                    font-family: "SCDream";
+                    font-weight: 600;
                     focus{
                         color: rgb(110, 23, 23);
                     }
@@ -57,10 +59,11 @@
                 line-height: 1.2;
                 span{
                     font-size: 17px;
-                    font-family: "SCDream5";
+                    font-family: "SCDream";
+                    font-weight: 500;
                     color: rgb(141, 87, 85);
                     focus{
-                        font-family: "SCDream6";
+                        font-weight: 600;
                         color: rgb(110, 23, 23);
                     }
                 }
@@ -74,7 +77,8 @@
                 padding: 5px 20px;
                 margin: 10px 0;
                 span{
-                    font-family: "SCDream5";
+                    font-family: "SCDream";
+                    font-weight: 500;
                     color: rgb(255, 255, 255);
                     font-size: 15px;
                     margin: 0 5px;
