--- a/src/assets/scss/screens/question.scss
+++ b/src/assets/scss/screens/question.scss
@@ -53,7 +53,8 @@
                     line-height: 1.3;
                     margin-bottom: 45px;
                     span {
-                        font-family: "SCDream5";
+                        font-family: "SCDream";
+                        font-weight: 500;
                         font-size: 18px;
                     }
                 }
@@ -80,7 +81,8 @@
                 padding: 12px 0;
                 border-radius: 10px;
                 box-shadow: 2px 2px 4px $selectBtn-shadow;
-                font-family: "SCDream6";
+                font-family: "SCDream";
+                font-weight: 600;
                 font-size: 16px;
                 display: flex;
                 align-items: center;
