--- a/src/assets/scss/screens/result.scss
+++ b/src/assets/scss/screens/result.scss
@@ -42,7 +42,8 @@
                 .title__type{
                     margin-bottom:10px;
                     span {
-                        font-family: "SCDream7";
+                        font-family: "SCDream";
+                        font-weight: 700;
                         font-size: 30px;
                     }
                 }
@@ -58,10 +59,11 @@
                         margin-right: 5px;
                     }
                     span{
-                        font-family: 'SCDream5';
+                        font-family: 'SCDream';
+                        font-weight: 500;
                         font-size: 17px;
                         strong{
-                            font-family: "SCDream6";
+                            font-weight: 600;
                         }
                     }
                 }
@@ -83,11 +85,12 @@
                     line-height: 1.3;
                     margin-bottom: 15px;
                     span{
-                        font-family: "SCDream5";
+                        font-family: "SCDream";
+                        font-weight: 500;
                         font-size: 22px;
                         color: #ec5a56;
                         strong{
-                            font-family: "SCDream6";
+                            font-weight: 600;
                             color: #6e1717;
                             font-size: 28px;
                         }
@@ -98,12 +101,13 @@
                     .good,
                     .bad{
                         font-size: 18px;
-                        font-family: "SCDream5";
+                        font-family: "SCDream";
+                        font-weight: 500;
                         &:not(:last-child){
                             margin-bottom: 4px;
                         }
                         strong{
-                            font-family: "SCDream6";
+                            font-weight: 600;
                         }
                     }
                 }
@@ -116,7 +120,8 @@
                 align-items: center;
                 span{
                     font-size: 14px;
-                    font-family: "SCDream5";
+                    font-family: "SCDream";
+                    font-weight: 500;
                     animation: $slowBlinkBlink;
                 }
             }
