--- a/src/assets/scss/config/fonts.scss
+++ b/src/assets/scss/config/fonts.scss
@@ -3,6 +3,7 @@
     src: url("configs/fonts/SCDream5.eot");
     src: url("configs/fonts/SCDream5.eot?#iefix") format("embedded-opentype"),
     url("configs/fonts/SCDream5.woff2") format("woff2"),
+    url("configs/fonts/SCDream5.woff") format("woff"),
     url("configs/fonts/SCDream5.ttf") format("truetype");
     font-weight: 500;
     font-display: swap;
@@ -12,6 +13,7 @@
     src: url("configs/fonts/SCDream6.eot");
     src: url("configs/fonts/SCDream6.eot?#iefix") format("embedded-opentype"),
     url("configs/fonts/SCDream6.woff2") format("woff2"),
+    url("configs/fonts/SCDream6.woff") format("woff"),
     url("configs/fonts/SCDream6.ttf") format("truetype");
     font-weight: 600;
     font-display: swap;
@@ -21,6 +23,7 @@
     src: url("configs/fonts/SCDream7.eot");
     src: url("configs/fonts/SCDream7.eot?#iefix") format("embedded-opentype"),
     url("configs/fonts/SCDream7.woff2") format("woff2"),
+    url("configs/fonts/SCDream7.woff") format("woff"),
     url("configs/fonts/SCDream7.ttf") format("truetype");
     font-weight: 700;
     font-display: swap;
