netlify deploy test

--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -25,7 +25,7 @@
                 span {
                     font-family: "SCDream";
                     font-weight: 500;
-                    focus{
+                    strong{
                         color: #ed6461;
                         font-size: 22px;
                     }
@@ -38,7 +38,7 @@
                     font-size: 22px;
                     font-family: "SCDream";
                     font-weight: 600;
-                    focus{
+                    strong{
                         color: rgb(110, 23, 23);
                     }
                 }
