--- a/src/views/partials/type4.pug
+++ b/src/views/partials/type4.pug
@@ -3,14 +3,14 @@
         .title__type
             span 유형 4
         .title__battery
-            img(data-src="configs/images/types/type4Battery.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/types/type4Battery.png" alt="")
             span 
                 strong 관태기 30%
                 | 
                 | 내 사람만 챙기기도 바쁜걸
     .content__row
         .mainImage
-            img(data-src="configs/images/types/type4Image.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/types/type4Image.png" alt="")
         .info
             span 과거에 집착 미련 노노~
                 br
