--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -4,21 +4,21 @@
             .questionTitle
                 span 외롭지도, 피곤하지도 않은
                     br
-                    focus '친구와의 적당한 거리'
+                    strong '친구와의 적당한 거리'
                     | 가 궁금하다면?
             .mainTitle
                 span 에세이
-                    focus 《적당히 가까운 사이》를
+                    strong 《적당히 가까운 사이》를
                     br
                     | 가까운 서점에서 만나보세요!
         .bookImage
             //- 샘플이미지
-            img(data-src="configs/images/startPage/sampleBook.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/startPage/sampleBook.png" alt="")
         .loadingComment
             .comment
                 span 관태기 테스트는 댄싱스네일 작가의 에세이
                     br
-                    focus 《적당히 가까운 사이》
+                    strong 《적당히 가까운 사이》
                     br
                     | 에피소드를 재구성해 제작하였습니다.
             .loadingAnimation#jsLoadingAnimation
@@ -33,4 +33,4 @@
                 .dot
             .resultBtn#jsResultBtn
                 .button.selectBtn(data-id="loading" ontouchstart="")
-                    img(data-src="configs/images/resultLoading/goToResult.png")
+                    img(data-src="//hbird1005.dothome.co.kr/images/resultLoading/goToResult.png" alt="")
