--- a/src/views/screens/question7.pug
+++ b/src/views/screens/question7.pug
@@ -1,19 +1,19 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="configs/images/questions/q4&7Bg.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/questions/q4&7Bg.png" alt="")
         .content__row
             .count
-                img(data-src="configs/images/questions/q7Count.png")
+                img(data-src="//hbird1005.dothome.co.kr/images/questions/q7Count.png" alt="")
             .main
                 .main__text
                     span 오랜만에 만난 친구가
                         br
                         | 계속 핸드폰만 본다면 당신은?
                 .main__image.q7
-                    img(data-src="configs/images/questions/q7Image.png")
-                    img(data-src="configs/images/questions/q7Item1.png")
-                    img(data-src="configs/images/questions/q7Item2.png")
+                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q7Image.png" alt="")
+                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q7Item1.png" alt="")
+                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q7Item2.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
