--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -2,16 +2,16 @@
     .slide__content
         .content__row
             .topImage
-                img.description(data-src="configs/images/startPage/startBubble.png")
-                img.main(data-src="configs/images/startPage/startHuman.png")
+                img.description(data-src="//hbird1005.dothome.co.kr/images/startPage/startBubble.png" alt="")
+                img.main(data-src="//hbird1005.dothome.co.kr/images/startPage/startHuman.png" alt="")
             .title
                 div 재미로보는
                 div 관태기 테스트
                 div 나의 관계 유형은?
         .bookImage
             //- 샘플이미지
-            img(data-src="configs/images/startPage/sampleBook.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/startPage/sampleBook.png" alt="")
         .startBtn
             .button(ontouchstart="")
-                img(data-src="configs/images/startPage/startBtn.png")
-                img(data-src="configs/images/startPage/startBtnText.png")
+                img(data-src="//hbird1005.dothome.co.kr/images/startPage/startBtn.png" alt="")
+                img(data-src="//hbird1005.dothome.co.kr/images/startPage/startBtnText.png" alt="")
