--- a/src/views/partials/type1.pug
+++ b/src/views/partials/type1.pug
@@ -3,14 +3,14 @@
         .title__type
             span 유형 1
         .title__battery
-            img(data-src="configs/images/types/type1Battery.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/types/type1Battery.png" alt="")
             span 
                 strong 관태기 0%
                 | 
                 | 관태기가 뭐예요?
     .content__row
         .mainImage
-            img(data-src="configs/images/types/type1Image.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/types/type1Image.png" alt="")
         .info
             span 위아더월드~
                 br
