--- a/src/views/partials/type2.pug
+++ b/src/views/partials/type2.pug
@@ -3,14 +3,14 @@
         .title__type
             span 유형 2
         .title__battery
-            img(data-src="configs/images/types/type2Battery.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/types/type2Battery.png" alt="")
             span 
                 strong 관태기 20%
                 | 
                 | 난 그냥 내 길을 간다
     .content__row
         .mainImage
-            img(data-src="configs/images/types/type2Image.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/types/type2Image.png" alt="")
         .info
             span 그러거나 말거나~
                 br
