--- a/src/views/screens/question3.pug
+++ b/src/views/screens/question3.pug
@@ -1,10 +1,10 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="configs/images/questions/q3Bg.png")
+            img(data-src="//hbird1005.dothome.co.kr/images/questions/q3Bg.png" alt="")
         .content__row
             .count
-                img(data-src="configs/images/questions/q3Count.png")
+                img(data-src="//hbird1005.dothome.co.kr/images/questions/q3Count.png" alt="")
             .main
                 .main__text
                     span 출근길,
@@ -15,9 +15,9 @@
                         br
                         | 만났을 때 당신의 행동은?
                 .main__image.q3
-                    img(data-src="configs/images/questions/q3Image.png")
+                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q3Image.png" alt="")
                     .mask
-                        img(data-src="configs/images/questions/q3Item1.png")
+                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q3Item1.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
