netlify deploy test

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
         //-     gtag('js', new Date());
 
         //-     gtag('config', 'UA-169195735-1');
-        script(src="https://developers.kakao.com/sdk/js/kakao.js");
+        script(src="https://developers.kakao.com/sdk/js/kakao.js")
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
         meta(name="HandheldFriendly" content="true")
