kakao shared btn test

--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -11,4 +11,23 @@
             .addThis
                 a#kakao-link-btn(href="javascript:sendLink()")
                     img(src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
+                script(type='text/javascript').
+                    //<![CDATA[
+                        // // 사용할 앱의 JavaScript 키를 설정해 주세요.
+                        Kakao.init('f9d8205eef6f7b4200be77c0b94dfc8a');
+                        // // 카카오링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
+                        Kakao.Link.createDefaultButton({
+                            container: '#kakao-link-btn',
+                            objectType: 'feed',
+                            content: {
+                                title: '딸기 치즈 케익',
+                                description: '#케익 #딸기 #삼평동 #카페 #분위기 #소개팅',
+                                imageUrl: 'http://mud-kage.kakao.co.kr/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png',
+                                link: {
+                                mobileWebUrl: 'https://developers.kakao.com',
+                                webUrl: 'https://developers.kakao.com'
+                                }
+                            }
+                        });
+                    //]]>
                 //- .addthis_inline_share_toolbox_2pvo
