--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -9,4 +9,6 @@
             .sharedImage
                 img(data-src="//hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
             .addThis
+                a(id="kakao-link-btn" href="javascript:sendLink()")
+                    img(data-src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png")
                 //- .addthis_inline_share_toolbox_2pvo
